--- a/src/webparts/spfx/components/Spfx.module.scss
+++ b/src/webparts/spfx/components/Spfx.module.scss
@@ -1,12 +1,97 @@
 @import '~@microsoft/sp-office-ui-fabric-core/dist/sass/SPFabricCore.scss';
+.tableStyle{  
+  display:  table ;
+  margin-left :  50px ;
+}
+.panelStyle{  
+ background:  white ;
+}
+
+.divStyle{
+background:  #eee ;
+padding:  20px ;
+margin:  20px ;
+}
+
+.headerCaptionStyle{
+background:  white ;
+display:  table-row ;
+  border:  solid ;
+  text-align :  center ;
+  width :  420px ;
+  height :  30px ;
+  padding-top :  3px ;
+  color :  white ;
+  margin-left :  100px ;
+  display :  block ;
+}
+
+.headerStyle{
+background:  #4B6978 ;
+display:  table-row ;
+  border:  solid ;
+  text-align :  center ;
+  width :  100px ;
+  height :  30px ;
+  padding-top :  10px ;
+  color :  white ;
+}
+
+.tableCaptionStyle{
+background:#4B6978 ;
+display:  block ;
+font-size :  20px ;
+font-weight:  bold ; 
+  border:  solid ;
+  text-align :  center ;
+  width :  650px ;
+  height :  100px ;
+  padding-top :  3px ;
+  border-radius:  25px ;
+  margin-left :  30px ;
+  margin-top :  20px ;
+  color:white;
+}
+
+.rowCaptionStyle{
+width :  600px ;
+display :   table-caption ;
+background:  #4B6978 ;
+text-align :  center ;
+padding:  20px ;
+font-size :  20px ;
+font-weight : bold ;
+color :  white ;
+}
+
+.rowStyle{
+display :   table-row ;
+background:  #eee ;
+padding:  20px ;
+margin:  20px ;
+font-weight : bold ;
+}
+
+.CellStyle{  
+  display:  table-cell ; 
+  border:  solid ;
+   border-color :  white ;
+  text-align :  center ;
+  width :  100px ;
+  height :  30px ;
+  padding-top :  10px ;
+  
+}  
+
+.container {
+  max-width: 700px;
+  margin: 0px auto;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 25px 50px 0 rgba(0, 0, 0, 0.1);
+}
 
 .spfx {
-  .container {
-    max-width: 700px;
-    margin: 0px auto;
-    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 25px 50px 0 rgba(0, 0, 0, 0.1);
-  }
 
+  
   .row {
     @include ms-Grid-row;
     @include ms-fontColor-white;
