--- a/src/webparts/spfx/components/Spfx.module.scss
+++ b/src/webparts/spfx/components/Spfx.module.scss
@@ -75,7 +75,7 @@ font-weight : bold ;
 .CellStyle{  
   display:  table-cell ; 
   border:  solid ;
-   border-color :  white ;
+   border-color :  rgb(158, 47, 47) ;
   text-align :  center ;
   width :  100px ;
   height :  30px ;
