changed rowcaption to pink

--- a/src/webparts/spfx/components/Spfx.module.scss
+++ b/src/webparts/spfx/components/Spfx.module.scss
@@ -56,7 +56,7 @@ font-weight:  bold ;
 .rowCaptionStyle{
 width :  600px ;
 display :   table-caption ;
-background:  #4B6978 ;
+background:  rgb(120, 75, 113) ;
 text-align :  center ;
 padding:  20px ;
 font-size :  20px ;
